Fix the issues with deprecated constructors of the Locale and URL classes